# nestris-ai

./: Cargo.toml  eval_weights.json  eval_weights_custom.json  eval_weights_new.json
benches/: benchmarks.rs  util.rs
src/: const_arrayvec.rs  consts.rs  eval.rs  lib.rs  main.rs  pieces.rs  search.rs  search_drop_specialized.rs  search_other.rs  search_smart.rs  search_smart2.rs  search_visited_alt.rs  state.rs  util.rs  weights.rs
