[package]
name = "nestris-ai"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
ahash = "0.8"
itertools = "0.13"
nanorand = "0.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# arrayvec = "0.7.4"
time_this = "0.2.5"

[dev-dependencies]
diol = { version = "0.8", default-features = false }
